[gd_scene load_steps=17 format=2]

[ext_resource path="res://player/player_controller.gd" type="Script" id=1]
[ext_resource path="res://player/player_left.png" type="Texture" id=2]
[ext_resource path="res://weapons/dagger/Dagger.tscn" type="PackedScene" id=3]
[ext_resource path="res://weapons/shortbow/Shortbow.tscn" type="PackedScene" id=4]
[ext_resource path="res://weapons/wand/Wand.tscn" type="PackedScene" id=5]
[ext_resource path="res://player/player_hurtbox.gd" type="Script" id=6]
[ext_resource path="res://player/player_hud/PlayerHUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://weapons/base_weapon/EmptyWeapon.tscn" type="PackedScene" id=8]
[ext_resource path="res://player/player_shadow.png" type="Texture" id=9]
[ext_resource path="res://player/overhead_meter.gd" type="Script" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 6.0

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Start"
length = 2.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.7, 1.8, 2.4, 2.5, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 4, 5, 6, 7, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.7, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -654 ), Vector2( 0, -654 ), Vector2( 0, -15 ), Vector2( 0, -14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.5, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 2, -14.5 ), Vector2( 2, -14.5 ), Vector2( 0, -14.5 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 2.5
height = 4.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 4.0
height = 8.0

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -654 )
texture = ExtResource( 2 )
hframes = 8

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 2, -14.5 )
scale = Vector2( 1.5, 1 )
z_index = -1
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -3 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Start"
anims/Idle = SubResource( 2 )
anims/Start = SubResource( 6 )
anims/Walk = SubResource( 3 )

[node name="Weapons" type="Node2D" parent="."]

[node name="EmptyWeapon1" parent="Weapons" instance=ExtResource( 8 )]
visible = false

[node name="EmptyWeapon2" parent="Weapons" instance=ExtResource( 8 )]
visible = false

[node name="Dagger" parent="Weapons" instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, -6 )

[node name="Wand" parent="Weapons" instance=ExtResource( 5 )]
visible = false
position = Vector2( 0, -6 )

[node name="Shortbow" parent="Weapons" instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -6 )

[node name="PlayerHurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 24
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtbox"]
position = Vector2( -0.5, -3 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="HurtTimer" type="Timer" parent="PlayerHurtbox"]

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2( -0.5, -3 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="PlayerHUD" parent="." instance=ExtResource( 7 )]

[node name="MeterBar" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outline" type="ColorRect" parent="MeterBar"]
margin_left = -17.0
margin_top = -33.0
margin_right = 17.0
margin_bottom = -27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeterBG" type="ColorRect" parent="MeterBar"]
margin_left = -16.0
margin_top = -32.0
margin_right = 16.0
margin_bottom = -28.0
color = Color( 0.207843, 0.207843, 0.207843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeterFill" type="ColorRect" parent="MeterBar"]
margin_left = -16.0
margin_top = -32.0
margin_right = 16.0
margin_bottom = -28.0
color = Color( 0.403922, 0.454902, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeterTimer" type="Timer" parent="MeterBar"]
[connection signal="timeout" from="PlayerHurtbox/HurtTimer" to="PlayerHurtbox" method="_on_HurtTimer_timeout"]
[connection signal="timeout" from="MeterBar/MeterTimer" to="MeterBar" method="_on_MeterTimer_timeout"]
